# modbus-tool

./: .gitignore  AGENT_SCHEDULE.md  CLAUDE.md  README.md  SPEC.md  TODO.md  index.html  package-lock.json  package.json  run-typecheck.sh
.github/workflows/: ci.yml
docs/: modbus-automation-script.md  tasks.md
scripts/: agent-schedule.sh  agent-workflow.sh  create-issues.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  logging.rs  main.rs  script.rs
src-tauri/src/commands/: mod.rs  script.rs  script_commands.rs  serial.rs  tcp.rs
src-tauri/src/modbus/: mod.rs  protocol.rs  rtu.rs  tcp.rs  types.rs
src-tauri/src/script/: action.rs  engine.rs  mod.rs  script.rs  trigger.rs
src-tauri/src/serial/: mod.rs  port.rs
src-tauri/src/storage/: database.rs  mod.rs
src/components/: AppLayout.tsx  ConnectionPanel.tsx  index.ts
src/components/ui/: alert-dialog.tsx  index.ts
src/hooks/: index.ts  useModbus.ts  useSerialPorts.ts  useTheme.ts
src/i18n/: index.ts
src/i18n/locales/: en.ts  zh.ts
src/lib/: index.ts  ipc.ts
src/pages/: ConnectionPage.tsx  MonitorPage.tsx  SettingsPage.tsx  index.ts
src/pages/Script/: ActionEditor.tsx  EditPage.tsx  LogPanel.tsx  TriggerEditor.tsx  data.ts  index.tsx  pages.tsx  service.ts  store.ts
src/stores/: connectionStore.ts  index.ts  monitorStore.ts  settingsStore.ts
src/types/: index.ts  modbus.ts
