[package]
name = "modbus-tool"
version = "0.1.0"
edition = "2021"
description = "Modern Modbus Protocol Debug Tool"
authors = ["YearsAlso"]

[lib]
name = "modbus_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror = "1"
anyhow = "1"
serialport = "4"
tokio-serial = "5"
futures = "0.3"
parking_lot = "0.12"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.31", features = ["bundled"] }
bytes = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
